finished the body with cards and quotes

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <header> 
         <div class="top">
-        <div class="logo">Header Logo</div>
+        <div class="logo"><a href="index.html">Header Logo</a></div>
         <div class="links">
             <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link third</li>
+                <li><a href="Images/lasagna.webp">Header link one</a></li>
+                <li><a href="Images/lasagna.webp">Header link two</a></li>
+                <li><a href="Images/lasagna.webp">Header link third</a></li>
             </ul>
         </div></div>
         <div class="middle">
@@ -23,6 +23,26 @@
         <div class="subtitle">This website has some features that are not found sign up now!!</div>
         <button class="signup">Sign Up</button></div>
         <img src="./Images/lasagna.webp"></div>
-    </header>
+    </header>   
+    <content>
+        <div class="title">Some Random information</div>
+        <div class="cards">
+          <div>
+            <img class="card" src="./Images/lasagna.webp">
+            <p>Some random text here is inserted by me</p></div>
+            <div>
+            <img class="card" src="./Images/lasagna.webp">
+            <p>random random random thing right here lolllll</p></div>
+            <div> <img class="card" src="./Images/lasagna.webp">
+                <p>another random text lying here under this picture lol</p></div>
+                <div>
+            <img class="card" src="./Images/lasagna.webp">
+            <p>Im running out of things to say don't even want to look on the example to get inspired</p></div>
+        </div>
+        <div class="bottom">
+            <div id="quote">Brother my name is pipo and your name is not pipo </div>
+            <div id="author">By Pipo</div>
+        </div>
+    </content>
 </body>
 </html>
