Finished the full project

--- a/index.html
+++ b/index.html
@@ -29,20 +29,29 @@
         <div class="cards">
           <div>
             <img class="card" src="./Images/lasagna.webp">
-            <p>Some random text here is inserted by me</p></div>
+            <p class="img-txt">Some random text here is inserted by me</p></div>
             <div>
             <img class="card" src="./Images/lasagna.webp">
-            <p>random random random thing right here lolllll</p></div>
+            <p class="img-txt">random random random thing right here lolllll</p></div>
             <div> <img class="card" src="./Images/lasagna.webp">
-                <p>another random text lying here under this picture lol</p></div>
+                <p class="img-txt">another random text lying here under this picture lol</p></div>
                 <div>
             <img class="card" src="./Images/lasagna.webp">
-            <p>Im running out of things to say don't even want to look on the example to get inspired</p></div>
+            <p class="img-txt">Im running out of things to say don't even want to look on the example to get inspired</p></div>
         </div>
         <div class="bottom">
-            <div id="quote">Brother my name is pipo and your name is not pipo </div>
-            <div id="author">By Pipo</div>
+            <div id="quote">"I knew it!"</div>
+            <div id="author">--Thor</div>
         </div>
+        <div class="action">
+            <div class="leftcontainer"><div class="txt title2">Call to action!It's Time!</div>
+            <div class="txt">sign up for our product by clicking that button right over there!</div></div>
+            <button id="buttonn">Sign Up</button>
+        </div>
+
     </content>
+    <footer>
+        <p>Copyright © The Odin Project 2024</p>
+    </footer>
 </body>
 </html>
